# tesseract-ocr

./: .gitignore  CMakeLists.txt  help
api/: CMakeLists.txt
api/character-recognition/: CMakeLists.txt  CMakeLists.txt~
api/character-recognition/src/: baseapi.cpp
api/character-recognition/systest/: character-recognition_example.cpp
ccmain/: Makefile  Makefile.in  thresholder.cpp
ccmain/.deps/: adaptions.Plo  applybox.Plo  control.Plo  cube_control.Plo  cube_reco_context.Plo  cubeclassifier.Plo  docqual.Plo  equationdetect.Plo  fixspace.Plo  fixxht.Plo  imgscale.Plo  ltrresultiterator.Plo  osdetect.Plo  output.Plo  pageiterator.Plo  pagesegmain.Plo  pagewalk.Plo  paragraphs.Plo  paramsd.Plo  pgedit.Plo  recogtraining.Plo  reject.Plo  resultiterator.Plo  scaleimg.Plo  tessbox.Plo  tessedit.Plo  tesseract_cube_combiner.Plo  tesseractclass.Plo  tessvars.Plo  tfacepp.Plo  thresholder.Plo  werdit.Plo
ccstruct/: Makefile  Makefile.in
ccstruct/.deps/: blobbox.Plo  blobs.Plo  blread.Plo  boxread.Plo  boxword.Plo  ccstruct.Plo  coutln.Plo  detlinefit.Plo  dppoint.Plo  fontinfo.Plo  genblob.Plo  linlsq.Plo  matrix.Plo  mod128.Plo  normalis.Plo  ocrblock.Plo  ocrpara.Plo  ocrrow.Plo  otsuthr.Plo  pageres.Plo  pdblock.Plo  points.Plo  polyaprx.Plo  polyblk.Plo  quadlsq.Plo  quadratc.Plo  quspline.Plo  ratngs.Plo  rect.Plo  rejctmap.Plo  seam.Plo  split.Plo  statistc.Plo  stepblob.Plo  vecfuncs.Plo  werd.Plo
ccutil/: Makefile  Makefile.in  mainblk.cpp
ccutil/.deps/: ambigs.Plo  basedir.Plo  bits16.Plo  bitvector.Plo  ccutil.Plo  clst.Plo  elst.Plo  elst2.Plo  errcode.Plo  globaloc.Plo  hashfn.Plo  indexmapbidi.Plo  mainblk.Plo  memry.Plo  params.Plo  serialis.Plo  strngs.Plo  tessdatamanager.Plo  tprintf.Plo  unichar.Plo  unicharmap.Plo  unicharset.Plo  unicodes.Plo
classify/: Makefile  Makefile.in  adaptmatch.cpp
classify/.deps/: adaptive.Plo  adaptmatch.Plo  blobclass.Plo  chartoname.Plo  classify.Plo  cluster.Plo  clusttool.Plo  cutoffs.Plo  errorcounter.Plo  extract.Plo  featdefs.Plo  flexfx.Plo  float2int.Plo  fpoint.Plo  fxdefs.Plo  intfeaturedist.Plo  intfeaturemap.Plo  intfeaturespace.Plo  intfx.Plo  intmatcher.Plo  intproto.Plo  kdtree.Plo  mastertrainer.Plo  mf.Plo  mfdefs.Plo  mfoutline.Plo  mfx.Plo  normfeat.Plo  normmatch.Plo  ocrfeatures.Plo  outfeat.Plo  picofeat.Plo  protos.Plo  sampleiterator.Plo  shapetable.Plo  speckle.Plo  tessclassifier.Plo  trainingsample.Plo  trainingsampleset.Plo  xform2d.Plo
cube/: Makefile  Makefile.in  cached_file.h  char_set.cpp  cube_object.cpp
cutil/: Makefile  Makefile.in
cutil/.deps/: bitvec.Plo  callcpp.Plo  cutil.Plo  cutil_class.Plo  danerror.Plo  efio.Plo  emalloc.Plo  freelist.Plo  listio.Plo  oldheap.Plo  oldlist.Plo  structures.Plo  tessarray.Plo
dict/: Makefile  Makefile.in
dict/.deps/: context.Plo  dawg.Plo  dict.Plo  hyphen.Plo  permdawg.Plo  permute.Plo  states.Plo  stopper.Plo  trie.Plo
help/: help  help_function  help_function.md
image/: Makefile  Makefile.in  pixel-array.cpp  pixel-array.h  pixel-data.c  pixel-data.h
image/.deps/: imgs.Plo  imgtiff.Plo  svshowim.Plo
neural_networks/runtime/: Makefile  Makefile.in
neural_networks/runtime/.deps/: input_file_buffer.Plo  neural_net.Plo  neuron.Plo  sigmoid_table.Plo
textord/: Makefile  Makefile.in
textord/.deps/: alignedblob.Plo  bbgrid.Plo  blkocc.Plo  blobgrid.Plo  ccnontextdetect.Plo  cjkpitch.Plo  colfind.Plo  colpartition.Plo  colpartitiongrid.Plo  colpartitionset.Plo  devanagari_processing.Plo  drawedg.Plo  drawtord.Plo  edgblob.Plo  edgloop.Plo  equationdetectbase.Plo  fpchop.Plo  gap_map.Plo  imagefind.Plo  linefind.Plo  makerow.Plo  oldbasel.Plo  pithsync.Plo  pitsync1.Plo  scanedg.Plo  sortflts.Plo  strokewidth.Plo  tabfind.Plo  tablefind.Plo  tablerecog.Plo  tabvector.Plo  textlineprojection.Plo  textord.Plo  topitch.Plo  tordmain.Plo  tospace.Plo  tovars.Plo  underlin.Plo  wordseg.Plo  workingpartset.Plo
training/: Makefile  Makefile.in
training/.deps/: ambiguous_words.Po  classifier_tester.Po  cntraining.Po  combine_tessdata.Po  commontraining.Plo  dawg2wordlist.Po  mergenf.Po  mftraining.Po  shapeclustering.Po  tessopt.Plo  unicharset_extractor.Po  wordlist2dawg.Po
viewer/: Makefile  Makefile.in
viewer/.deps/: scrollview.Plo  svmnode.Plo  svpaint.Plo  svutil.Plo
wordrec/: Makefile  Makefile.in
wordrec/.deps/: associate.Plo  bestfirst.Plo  chop.Plo  chopper.Plo  closed.Plo  drawfx.Plo  findseam.Plo  gradechop.Plo  heuristic.Plo  language_model.Plo  makechop.Plo  matchtab.Plo  olutil.Plo  outlines.Plo  pieces.Plo  plotedges.Plo  plotseg.Plo  render.Plo  segsearch.Plo  tface.Plo  wordclass.Plo  wordrec.Plo
